prusti-tests/tests/verify_overflow/ui/core_proof/counterexamples/struct-1.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/struct-1.rs:13:11
   |
13 | #[ensures(old(y.balance) > result.1.balance)]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/struct-1.rs:14:1
   |
14 | / fn test1(
15 | |     mut x: Account,
16 | |     mut y: Account,
17 | |     amount: i32,
...  |
24 | |     (x, y)
25 | | }
   | |_^
note: counterexample for "x"
       value:   Account {
            balance: 5,
        }
  --> $DIR/struct-1.rs:15:5
   |
15 |     mut x: Account,
   |     ^^^^^
note: counterexample for "x"
       value:   Account {
            balance: 2,
        }
  --> $DIR/struct-1.rs:21:9
   |
21 |         x.balance -= amount;
   |         ^^^^^^^^^^^^^^^^^^^
note: counterexample for "y"
       value:   Account {
            balance: 1,
        }
  --> $DIR/struct-1.rs:16:5
   |
16 |     mut y: Account,
   |     ^^^^^
note: counterexample for "y"
       value:   Account {
            balance: 4,
        }
  --> $DIR/struct-1.rs:22:9
   |
22 |         y.balance += amount;
   |         ^^^^^^^^^^^^^^^^^^^
note: counterexample for "amount"
       value:   3
  --> $DIR/struct-1.rs:17:5
   |
17 |     amount: i32,
   |     ^^^^^^
note: counterexample for "temp"
       value:   1
  --> $DIR/struct-1.rs:20:20
   |
20 |         let temp = y.balance;
   |                    ^^^^^^^^^

error: aborting due to previous error

